style: use String.formatted() with markup templates
Replace string concatenation inside Ansi.markup() calls with
.formatted() for readability. Use tamboui's [[]] double-bracket
escape for literal brackets in prompts.